0.27
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::VersionEditionOrTranslation.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::WikidataProperty.
 - Improve example comments.

0.26 2023-04-21T20:18:03+02:00
 - Add check_datetime() utility.
 - Add date time check to Wikibase::Datatype::Value::Time.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GrammaticalGender::Masculine.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::Human.
 - Fix example in
   Test::Shared::Fixture::Wikibase::Datatype::Value::Item::Wikidata::WikidataEntity.
 - Fix module doc description in
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Douglas.
 - Improve doc EXAMPLE in Wikibase::Datatype::Reference to something real.

0.25 2023-04-17T11:28:59+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::ReferenceURL.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF.
 - Add item to doc SEE ALSO section in
   Wikibase::Datatype::Value::Globecoordinate.
 - Add reference to
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::SexOrGender::Male
   as example of statement with multiple references.
 - Add references parameter and method to MediainfoStatement.
 - Fix
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human
   object.
 - Sort usage modules in
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF.

0.24 2023-01-06T12:57:15+01:00
 - Add Czech description to
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Add check for label length (250). If it's longer then strip.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Change alias from 'pes' to 'pes domácí' in
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.